--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+    --red-color: #e23652;
 
 }
 
@@ -9,7 +10,7 @@
 }
 
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #baccc3;
 }
 
@@ -31,6 +32,10 @@ body {
     color: white;
 }
 
+.navbar .container a:hover {
+    color: #414142;
+}
+
 .navbar ul {
     display: flex;
     margin-bottom: 10px;
@@ -44,7 +49,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    background-color:#e23652;;
+    background-color:#e23652;
     height: 60px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -86,7 +91,6 @@ body {
 
 .button-section .button-row button:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    
     cursor: pointer;
 }
 
@@ -96,19 +100,23 @@ body {
     justify-content: center ;
 }
 
-h2 {
-    text-align: center;
-    margin-top: 60px;
+.header-one {
+    margin-top: 90px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    text-decoration: underline;
 }
 
 .project-section .projects {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    height: 700px;
-    margin-top: 20px;
+    height: 900px;
     padding-top: 30px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding-top: 100px;
 }
 
 .project-section .projects img {
@@ -126,14 +134,32 @@ h2 {
 }
 
 .project-section .projects .image-small:hover {
-    box-shadow: inset 0px 0px 8px #e23652, 0 0 15px #e23652;
+    box-shadow: inset 0px 0px 8px #7e7b7c, 0 0 15px #7e7b7c;
     width: 510px;
 
 }
-
+/* Seperate hover effects because first image is larger than the others */
 .project-section .projects .image-big:hover {
-    box-shadow: inset 0px 0px 8px #e23652, 0 0 15px #e23652;
+    box-shadow: inset 0px 0px 8px #ffffff, 0 0 15px #ffffff;
     width: 810px;
+}
+
+.about-me .about-me-section {
+    height: 300px;
+}
+
+.about-me h2 {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    text-decoration: underline;
+}
+
+
+.about-me p {
+    text-align: center;
 }
 
 
@@ -181,6 +207,8 @@ h2 {
     .project-section .projects .image-big:hover {
         width: 505px;
     }
+
+
 
 
 
